Replace deprecated class#newInstance